<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddProductActivity">


    <EditText
        android:hint="@string/hint_product_name"
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/hint_price"
        android:id="@+id/et_unit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_show_products"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/btn_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>