<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_manage_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_manage_products"
         />

    <Button
        android:text="@string/btn_new_bill"
        android:id="@+id/btn_new_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/btn_all_bills"
        android:id="@+id/btn_all_bills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/btn_manage_customers"
        android:id="@+id/btn_manage_customers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_select_date"
        android:text="Select Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="Select Time"
        android:id="@+id/btn_select_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>