<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    tools:context=".activities.AddCustomerActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_padding">

            <EditText
                android:drawableEnd="@drawable/ic_customer"
                android:id="@+id/et_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_customer_name" />

            <EditText
                android:drawableEnd="@drawable/ic_mobile"
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_mobile_no" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save" />

                <Button
                    android:id="@+id/btn_show_customers"
                    android:layout_marginStart="@dimen/small_margin"
                    android:text="@string/btn_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>